Fixing the last details with responsiveness & spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ body {
 
 /* success page return button styling */
 .success_return {
-background-color: transparent;
+background-color: #00173c;
 color: #f5deb3;
 }
 
